# brilliant-minds

./: .env.example  .gitignore  README.md  pyproject.toml  test_agents.py  test_orchestrator.py
frontend/: package.json
frontend/app/: globals.css  page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AppChrome.tsx  BeforeAfterPreview.tsx  ChatResultCard.tsx
frontend/lib/: api.ts
frontend/src/: App.tsx
frontend/src/api/: endpoints.ts
frontend/src/components/: ComprehensionQuiz.tsx  ConceptMap.tsx  OnboardingModal.tsx  ProgressChart.tsx  SimplifiedView.tsx  WcagBadge.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Profile.tsx  Shared.tsx
frontend/src/store/: auth.ts
infra/: main.bicep  main.parameters.bicepparam  main.parameters.json
infra/modules/: generative-model.bicep  project.bicep  storage-account.bicep
src/: main.py  orchestrate_agents.py
src/agents/: adaptation_agent.py  agentic_rag_agent.py  base_agent.py  calm_evaluator.py  concept_agent.py  explainer_agent.py  factory.py  glossary_agent.py  history_provider.py  orchestrator.py  orchestrator_agent.py  parser_agent.py  simplifier_agent.py  task_decomposer_agent.py  task_selector_agent.py  teacher_agent.py  triage_agent.py  validator_agent.py
src/agents/common/: memory.py
src/agents/context/: custom_context.py
src/config/: settings.py
src/core/: security.py
src/models/: schemas.py
src/services/: auth_service.py  blob_service.py  cosmos_service.py  search_service.py
(+20 files in other folders)
